# brainnet

./: README.md  environment.yaml  pyproject.toml
.github/workflows/: main.yaml
brainnet/: __init__.py  evaluate.py  evaluate_photo.py  event_handlers.py  initializers.py  loss_weights.py  sphere_utils.py  train.py  train2.py  train_brainnet.py  train_brainreg.py  train_utilities.py  training.py  utilities.py
brainnet/config/: __init__.py  base.py  datasets.yaml  engines.py  train2_foundation.py  train2_foundation.toml  train_foundation.yaml  train_foundation_t1w.yaml  train_segment_t1.yaml  trainbak.yaml  utilities.py
brainnet/config/braininflate/: events_evaluator.py  events_trainer.py  losses.py  main.py
brainnet/config/brainreg/: events_evaluator.py  events_trainer.py  losses.py  main.py
brainnet/config/cortex/: events_trainer.py  losses.py  main.py
brainnet/config/loss/: foundation.yaml  foundation_00000.yaml  foundation_00200.yaml  (+9 more)
brainnet/evaluation/: analyze.py  brainnet_eval.py  brainnet_predict.py  surface_evaluation.py  surface_evaluation.sh  surface_evaluation_analysis.py  utilities.py
brainnet/mesh/: surface.py  topology.py
brainnet/modules/: __init__.py  blocks.py  brainnet.py  criterion.py  graph.py  graph_layers.py  head.py  loss_wrappers.py  losses.py  losses_image.py  losses_surface.py  tasks.py
brainnet/prediction/: __init__.py  brainnet_predict.py
brainnet/resources/: __init__.py  affine-lh-to-rh.npy  medial-wall.pt  vertices-white-lh.npy
brainnet/train/: braininflate_train.py  brainnet_train.py  brainreg_train.py  features_train.py  sphericalreg_train.py  train.py  utilities.py
tools/: create_pseudo_dataset.py  create_pseudo_dataset.sh  decouple_white_and_pial.py  find_11_nearest_tris_per_vertex.py  restructure_data.py  submit_brainnet.sh  submit_brainreg.sh  submit_inflate.sh  submit_spherical_reg.sh  submit_spherical_reg_old.sh  topofit.py  view_image_slices.py
(+51 files in other folders)
