[project]
name = "BrainNet"
version = "0.0.1"
description = "Neural network for various neuroimaging related tasks (e.g., segmentation)."
maintainers = [
    {name = "Jesper Duemose Nielsen"}
]
requires-python = ">=3.11"
dependencies = [
    "brainsynth >= 0.0.1",
    "ignite >= 0.4",
    "nibabel >= 5.1",
    "numpy >= 1.26",
    "scipy >= 1.11",
    "torch >= 2",
]

[project.optional-dependencies]
train = [
    "wandb >= 0.16",
]
